improvements, refactoring locations, add widget registry [PTV-1895]

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,7 +8,8 @@ services:
     build:
       context: .
     container_name: eapearsonwidgettest10
-    hostname: eapearsonwidgettest10
+    # should match the exact module name
+    hostname: eapearsonWidgetTest10
     dns: 8.8.8.8
     volumes:
       - .:/kb/module
